<resources>
    <string name="app_name">Note</string>
    <string name="searchtitle">Search notes</string>
    <string name="search_hint">Search your notes...</string>
    <string name="tag">Tag</string>
    <string name="edit_note">EDIT NOTE</string>
    <string name="edit_name_s_note">Edit name\'s note</string>
    <string name="edit_tag_s_note">Edit tag\'s note</string>
    <string name="save">Save</string>
    <string name="canel">Canel</string>
    <string name="add">add</string>
    <string name="title_add">add</string>
    <string name="title_mamera">mamera</string>
</resources>
