<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#51B7C4"
    android:minWidth="300dp"
    android:maxWidth="300dp"
    android:minHeight="400dp"
    android:layout_height="match_parent">

    <TextView
        android:textSize="30sp"
        android:textColor="#B4460B"
        android:padding="10dp"

        android:text="@string/edit_note"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name_s_note"
        >
    </EditText>
    <EditText
        android:id="@+id/editTag"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_tag_s_note"
        >
    </EditText>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/editSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="2dp"
        android:layout_weight="1"
        >
    </Button>
    <Button
        android:id="@+id/editCanel"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canel"
        android:layout_weight="1"
        >
    </Button>
    </LinearLayout>

</LinearLayout>